--- a/CSS/C01_Inline.html
+++ b/CSS/C01_Inline.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	
-	<h3>필요한 코드와 CSS 스타일에 손쉽게 액세스 작업 시간 단축</h3>
-	<p>관련 파일 막대에 있는 파일을 클릭하면 코드 뷰에서 소스를 확인하면서 동시에 디자인 뷰에서 상위 페이지를 볼 수 있습니다. 
+	<h3 style="color: orange; font-size: 200pt;">필요한 코드와 CSS 스타일에 손쉽게 액세스 작업 시간 단축</h3>
+	<p style="color: gray; line-height: 1.5em">관련 파일 막대에 있는 파일을 클릭하면 코드 뷰에서 소스를 확인하면서 동시에 디자인 뷰에서 상위 페이지를 볼 수 있습니다. 
 		코드 탐색기를 사용하여 현재 선택 영역에 영향을 미치는 모든 CSS 소스 코드에 신속하게 액세스할 수도 있습니다.</p>
 
 	<h3>향상된 코드 힌트 기능으로 신속하게 스트립트 작성 작업 시간 단축</h3>
