--- a/CSS/C02_Header.html
+++ b/CSS/C02_Header.html
@@ -5,6 +5,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Inline Header</title>
+	<style type="text/css">
+		h3 { color: red; }
+	</style>
+	<style type="text/css">
+		body { color: gray; }
+		h3 { color: orange; }
+		p { line-height: 1.8em;}
+	</style>
+	
 </head>
 <body>
 	
@@ -12,9 +21,9 @@
 	<p>관련 파일 막대에 있는 파일을 클릭하면 코드 뷰에서 소스를 확인하면서 동시에 디자인 뷰에서 상위 페이지를 볼 수 있습니다. 
 		코드 탐색기를 사용하여 현재 선택 영역에 영향을 미치는 모든 CSS 소스 코드에 신속하게 액세스할 수도 있습니다.</p>
 
-	<h3>향상된 코드 힌트 기능으로 신속하게 스트립트 작성 작업 시간 단축</h3>
-	<p>JavaScript의 주요 객체와 기본 데이터 유형에 대한 지원이 더욱 강화되어 JavaScript를 보다 효과적으로 작성할 수 있습니다. 
-		jQuery, Prototype, Spry 등 일반적으로 널리 사용되는 JavaScript 프레임워크를 통합하여 더욱 확장된 Dreamweaver CS4의 코딩 기능을 활용할 수 있습니다.</p>
+	<h3 style="color: lightgreen">향상된 코드 힌트 기능으로 신속하게 스트립트 작성 작업 시간 단축</h3>
+	<div>JavaScript의 주요 객체와 기본 데이터 유형에 대한 지원이 더욱 강화되어 JavaScript를 보다 효과적으로 작성할 수 있습니다. 
+		jQuery, Prototype, Spry 등 일반적으로 널리 사용되는 JavaScript 프레임워크를 통합하여 더욱 확장된 Dreamweaver CS4의 코딩 기능을 활용할 수 있습니다.</div>
 
 	<h3>데이터베이스나 XML 작업 없이 동적 데이터 추가 작업 시간 단축</h3>
 	<p>데이터베이스나 XML 코딩 작업의 어려움 없이 웹 페이지에 강력한 동적 데이터를 통합할 수 있습니다. 
