--- a/CSS/C05_Comment.html
+++ b/CSS/C05_Comment.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Comment Style</title>
 	<style type="text/css">
+		/* 이게 주석입니다. 이거 하나만 존재 */
 		h3 { font-size: 14pt; }
 		p { font-size: 12pt; line-height:1.5em; }
 	</style>
