--- a/CSS/C08_IDSelecter.html
+++ b/CSS/C08_IDSelecter.html
@@ -10,6 +10,18 @@
 		body { font-size: 12pt; line-height: 1.5em; color: gray; }
 		em { font-style:normal; }
 		h1, h2, h3, h4, h5, h6 { line-height:1.4em; }
+
+		/*
+			ID 속성자
+			문서에 동일한 이름이 1개만 존재해야 한다.(중복 이름이 없어야 함. 있어도 에러는 아님)
+			#idName { 명령: 값; ....}
+		*/
+		#wrap { margin: 20px auto; border: 1px solid gray;  width: 800px; }
+		#photoshop { color: green; }
+		#photoshop em { color: red; }
+		#photoshop p { line-height: 2em; }
+
+		#webaccess { color: orange; }
 	</style>
 </head>
 
