--- a/CSS/C11_Font.html
+++ b/CSS/C11_Font.html
@@ -9,7 +9,7 @@
 		/* font-family, font-style, font-weight, font-variant, font-size
 		font: font-style font-weight font-size/line-height font-family;  */
 		
-		
+		em { color: rgba(180, 121, 65, 0.753)}
 
 	</style>
 </head>
