--- a/CSS/C07_ClassSelecter.html
+++ b/CSS/C07_ClassSelecter.html
@@ -7,17 +7,26 @@
 	<title>Dlass Selecter</title>
 	<style type="text/css">
 		body { font-size: 12pt; line-height: 1.5em; color: gray; }
+		h1, h2, h3, ul, ol, li { margin: 0; padding: 0; }
+		/* 
+			클래스 선택자는 .className { 명령: 값; ....} 
+			사용은 태그에서 <p class="className">...</p>
+		*/
+		.color-gray { color: lightgray; }
+		.under { text-decoration: underline; }
+
+		.normal { font-style: normal; font-weight: normal;}		/* normal, italic */
 	</style>
 </head>
 <body>
 
-	<h1>필요한 코드와 <em>CSS 스타일</em>에 손쉽게 액세스 작업 시간 단축</h1>
-	<p>관련 파일 막대에 있는 파일을 클릭하면 코드 뷰에서 소스를 확인하면서 동시에 디자인 뷰에서 상위 페이지를 볼 수 있습니다. 코드 탐색기를 사용하여 현재 선택 영역에 영향을 미치는 모든 CSS 소스 코드에 신속하게 액세스할 수도 있습니다.</p>
+	<h1>필요한 코드와 <em class="normal">CSS 스타일</em>에 손쉽게 액세스 작업 시간 단축</h1>
+	<p class="color-gray under">관련 파일 막대에 있는 파일을 클릭하면 코드 뷰에서 소스를 확인하면서 동시에 디자인 뷰에서 상위 페이지를 볼 수 있습니다. 코드 탐색기를 사용하여 현재 선택 영역에 영향을 미치는 모든 CSS 소스 코드에 신속하게 액세스할 수도 있습니다.</p>
 
 	<h2>향상된 <em>코드 힌트 기능</em>으로 신속하게 스트립트 작성 작업 시간 단축</h2>
 	<p>JavaScript의 주요 객체와 기본 데이터 유형에 대한 지원이 더욱 강화되어 JavaScript를 보다 효과적으로 작성할 수 있습니다. jQuery, Prototype, Spry 등 일반적으로 널리 사용되는 JavaScript 프레임워크를 통합하여 더욱 확장된 Dreamweaver CS4의 코딩 기능을 활용할 수 있습니다.</p>
 
-	<h3>데이터베이스나 XML 작업 없이 <em>동적 데이터 추가 작업</em> 시간 단축</h3>
+	<h3 class="color-gray">데이터베이스나 XML 작업 없이 <em>동적 데이터 추가 작업</em> 시간 단축</h3>
 	<p>데이터베이스나 XML 코딩 작업의 어려움 없이 웹 페이지에 강력한 동적 데이터를 통합할 수 있습니다. Spry 데이터 세트는 간단한 HTML 표에 포함된 컨텐츠를 인터랙티브한 데이터 소스로 인식합니다.</p>
 
 	<h4>Photoshop <em>스마트 오브젝트 기능</em>을 통해 신속하게 이미지 업데이트 작업 시간 단축</h4>
