--- a/CSS/C11_Font.html
+++ b/CSS/C11_Font.html
@@ -29,6 +29,8 @@
 
 		.font-all { font: italic 700 25pt/1.5em 궁서; }
 		.font-normal { font: 16px/1.8em 궁서; }
+
+		.varient { font-variant: small-caps;}
 	</style>
 </head>
 <body>
@@ -42,7 +44,7 @@
 	<h3>데이터베이스나 XML 작업 없이 동적 데이터 추가 작업 시간 단축</h3>
 	<p class="font-all">데이터베이스나 XML 코딩 작업의 어려움 없이 웹 페이지에 강력한 동적 데이터를 통합할 수 있습니다. Spry 데이터 세트는 간단한 HTML 표에 포함된 컨텐츠를 인터랙티브한 데이터 소스로 인식합니다.</p>
 
-	<h4>Photoshop 스마트 오브젝트 기능을 통해 신속하게 이미지 업데이트 작업 시간 단축</h4>
+	<h4><span class="varient">Photoshop</span> 스마트 오브젝트 기능을 통해 신속하게 이미지 업데이트 작업 시간 단축</h4>
 	<p class="font-normal">원본 파일이 변경될 때마다 이미지를 다시 저장하거나 삽입하지 않고도 Adobe Photoshop®(PSD) 파일을 Dreamweaver CS4에 스마트 오브젝트로 삽입한 다음 한 번의 클릭으로 이미지를 업데이트할 수 있습니다. 이미지는 선호하는 HTML용 포맷으로 웹에 맞게 자동으로 최적화됩니다.</p>
 
 	<h5>손쉽게 CSS 모범 사례 적용 작업 시간 단축</h5>
