--- a/CSS/C14_Table.html
+++ b/CSS/C14_Table.html
@@ -8,8 +8,8 @@
   <style type="text/css">
 		body { font-size: 12pt; line-height: 1.5em; color: gray; }
 		
-    
-    
+    .table-one { width: 750px; border: 1px solid gray; caption-side: bottom;}
+    th, td {border: 1px solid gray; }
 	</style>
 </head>
 <body>
@@ -19,7 +19,7 @@
 	<h2>향상된 코드 힌트 기능으로 신속하게 스트립트 작성 작업 시간 단축</h2>
 	<p>JavaScript의 주요 객체와 기본 데이터 유형에 대한 지원이 더욱 강화되어 JavaScript를 보다 효과적으로 작성할 수 있습니다. jQuery, Prototype, Spry 등 일반적으로 널리 사용되는 JavaScript 프레임워크를 통합하여 더욱 확장된 Dreamweaver CS4의 코딩 기능을 활용할 수 있습니다.</p>
 
-  <table>
+  <table class="table-one">
     <caption>학생 점수</caption>
     <thead>
       <tr>
