--- a/CSS/C13_List.html
+++ b/CSS/C13_List.html
@@ -8,6 +8,36 @@
 	<style type="text/css">
 		body { font-size: 12pt; line-height: 1.5em; color: gray; }
 		
+		/* ul, ol 상관없이 지정한 type이 적용됨 */
+		#news { list-style-type: upper-alpha; }
+
+		/* #news 내부에 있는 모든 li가 해당된다. 위의 속성을 덮어씀 */
+		#news li { 
+			/* list-style-type: disc;  */
+			list-style-position: outside;			/* inside는 한탭 더 들어가서 배치된다 */
+		}
+
+		#event { 
+			list-style-type: none; 
+			list-style-image: url('./images/blueIcon.gif');
+		}
+
+		#menu { list-style-type: none; width: 500px; padding: 0}
+		#menu li { border: 1px solid gray; width: 100px; padding: 5px;}
+		#menu li:hover { background-color: gray; color: white; }
+
+		#menu2 { list-style-type: none; width: 500px; padding: 0}
+		#menu2 li { 
+			border: 1px solid gray; 
+			border-top-left-radius: 10px;
+			border-top-right-radius: 10px;
+			text-align: center;
+			font-weight: bold;
+			width: 100px; 
+			padding: 5px; 
+			float: left; 
+		}
+		#menu2 li:hover { background-color: gray; color: white; }
 	</style>
 </head>
 <body>
@@ -35,7 +65,13 @@
 
 <h3>Menu</h3>
 <ul id="menu">
-	<li>JavaScript</li>
+	<li><a href="">JavaScript</a></li>
+	<li>React</li>
+	<li>Vue</li>
+</ul>
+
+<ul id="menu2">
+	<li><a href="">JavaScript</a></li>
 	<li>React</li>
 	<li>Vue</li>
 </ul>
