--- a/CSS/C15_BoxModel.html
+++ b/CSS/C15_BoxModel.html
@@ -9,7 +9,24 @@
 		body { font-size: 12pt; line-height: 1.5em; color: gray; }
 		h1, h2, h3, h4, h5, h6 { font-size:1.2em; }
 
-		
+		.bottom { width: 500px; height: 70px; overflow: auto;}
+		.two { width: 500px; height: 70px; overflow: auto; 
+			/* left, right, top, bottom */
+			border-bottom-width: 2px;
+			border-bottom-style: dotted;	/* solid dashed dotted groove inset outset  */
+			border-bottom-color: orange;
+		}
+
+		.three {
+			width: 500px; height: 100px; overflow: auto; 
+			border-bottom: 1px solid orange;		/* bottom 속성만 하나로 통합 기술 */
+		}
+
+		.four {
+			width: 500px; height: 100px; overflow: auto; 
+			border: 10px groove orange;				/* left, right, top, bottom 통합 기술 */
+			box-shadow: 5px 5px 10px 5px gray;
+		}
 	</style>
 </head>
 <body>
@@ -18,7 +35,7 @@
 	
 	<div class="one">
 		<h1>필요한 코드와 <em>CSS 스타일</em>에 손쉽게 액세스 작업 시간 단축</h1>
-		<p>관련 파일 막대에 있는 파일을 클릭하면 코드 뷰에서 소스를 확인하면서 동시에 디자인 뷰에서 상위 페이지를 볼 수 있습니다. 코드 탐색기를 사용하여 현재 선택 영역에 영향을 미치는 모든 CSS 소스 코드에 신속하게 액세스할 수도 있습니다.</p>
+		<p class="bottom">관련 파일 막대에 있는 파일을 클릭하면 코드 뷰에서 소스를 확인하면서 동시에 디자인 뷰에서 상위 페이지를 볼 수 있습니다. 코드 탐색기를 사용하여 현재 선택 영역에 영향을 미치는 모든 CSS 소스 코드에 신속하게 액세스할 수도 있습니다.</p>
 	</div>
 	
 	<div class="two">
