--- a/CSS/C15_BoxModel.html
+++ b/CSS/C15_BoxModel.html
@@ -26,6 +26,22 @@
 			width: 500px; height: 100px; overflow: auto; 
 			border: 10px groove orange;				/* left, right, top, bottom 통합 기술 */
 			box-shadow: 5px 5px 10px 5px gray;
+			margin-bottom: 50px;
+		}
+
+		.five {
+			width: 500px; height: 100px; overflow: auto; 
+			border: 1px solid orange;				/* left, right, top, bottom 통합 기술 */
+			border-radius: 10px;
+		}
+
+		.six {
+			width: 300px; height: 250px; 
+			border: 1px solid orange;				/* left, right, top, bottom 통합 기술 */
+			/* border-radius: 10; */				 /* 전체 */
+			border-top-left-radius: 10px;
+			border-top-right-radius: 10px;
+			padding: 10px;
 		}
 	</style>
 </head>
@@ -56,6 +72,12 @@
 	<div class="five">
 		<h5>손쉽게 CSS 모범 사례 적용 작업 시간 단축</h5>
 		<p>코드를 작성하지 않고 CSS 모범 사례를 구현할 수 있습니다. 속성 패널에서 새로운 CSS 규칙을 만들 수 있고 CSS의 각 속성이 어디에 적용되는지 간단하고 명확하게 파악할 수 있습니다.</p>
+	</div>
+	<br>
+	<br>
+
+	<div class="six">
+		<img src="./images/tree.jpeg" alt="tree">
 	</div>
 	
 </div>
