--- a/CSS/C17_FloatLayout.html
+++ b/CSS/C17_FloatLayout.html
@@ -10,7 +10,24 @@
 		body, h1, h2, h3, h4, h5, h6 { margin:0; padding:0 }
 		h1, h2, h3, h4, h5, h6 { font-size:1.2em; }
 
-		
+		#wrapper { 
+			width: 800px; 
+			margin: 20px auto;
+		}
+
+		#one {
+			border: 1px solid orange;
+		}
+		#two {
+			border: 1px solid orange;
+		}
+		#three {
+			border: 1px solid orange;
+		}
+		#four {
+			border: 1px solid orange;
+		}
+
 	</style>
 </head>
 <body>
