--- a/CSS/C17_FloatLayout.html
+++ b/CSS/C17_FloatLayout.html
@@ -20,15 +20,20 @@
 		}
 		#two {
 			border: 1px solid orange;
-			/* box-sizing: border-box; */
+			box-sizing: border-box;
 			float: left;
 			width: 200px;
+			height: 500px;
 		}
 		#three {
 			border: 1px solid orange;
-			/* box-sizing: border-box; */
+			box-sizing: border-box;
 			float: left;
+			/* width: 576px; */			/* box-sizing이 없는 경우 계산 필수 */
 			width: 600px;
+			padding: 10px;
+			height: 500px;
+			overflow: auto;
 		}
 		#four {
 			border: 1px solid orange;
@@ -54,7 +59,26 @@
 		
 		<div id="three">
 			<h3>3. 데이터베이스나 XML 작업 없이 동적 데이터 추가 작업 시간 단축</h3>
-			<p>데이터베이스나 XML 코딩 작업의 어려움 없이 웹 페이지에 강력한 동적 데이터를 통합할 수 있습니다. Spry 데이터 세트는 간단한 HTML 표에 포함된 컨텐츠를 인터랙티브한 데이터 소스로 인식합니다.</p>
+			<p>
+				데이터베이스나 XML 코딩 작업의 어려움 없이 웹 페이지에 강력한 동적 데이터를 통합할 수 있습니다.<br>
+				Spry 데이터 세트는 간단한 HTML 표에 포함된 컨텐츠를 인터랙티브한 데이터 소스로 인식합니다.<br>
+			</p>
+			<p>
+				데이터베이스나 XML 코딩 작업의 어려움 없이 웹 페이지에 강력한 동적 데이터를 통합할 수 있습니다.<br>
+				Spry 데이터 세트는 간단한 HTML 표에 포함된 컨텐츠를 인터랙티브한 데이터 소스로 인식합니다.<br>
+			</p>
+			<p>
+				데이터베이스나 XML 코딩 작업의 어려움 없이 웹 페이지에 강력한 동적 데이터를 통합할 수 있습니다.<br>
+				Spry 데이터 세트는 간단한 HTML 표에 포함된 컨텐츠를 인터랙티브한 데이터 소스로 인식합니다.<br>
+			</p>
+			<p>
+				데이터베이스나 XML 코딩 작업의 어려움 없이 웹 페이지에 강력한 동적 데이터를 통합할 수 있습니다.<br>
+				Spry 데이터 세트는 간단한 HTML 표에 포함된 컨텐츠를 인터랙티브한 데이터 소스로 인식합니다.<br>
+			</p>
+			<p>
+				데이터베이스나 XML 코딩 작업의 어려움 없이 웹 페이지에 강력한 동적 데이터를 통합할 수 있습니다.<br>
+				Spry 데이터 세트는 간단한 HTML 표에 포함된 컨텐츠를 인터랙티브한 데이터 소스로 인식합니다.<br>
+			</p>
 		</div>
 		
 		<div id="four">
