--- a/CSS/C18_Modal.html
+++ b/CSS/C18_Modal.html
@@ -10,7 +10,10 @@
             background-color: rgba(0, 0, 0, 0.3);
             display: none;
         }
-        form { background-color: white; width: 400px; padding: 10px; border: 1px solid orange }
+        form { background-color: white; width: 400px; padding: 10px; border: 1px solid orange;
+            position: absolute; top: 20%; left: 50%;
+            transform: translateX(-50%) 
+        }
         form h3 { background-color: gray; color: white; padding: 5px; }
         form div { margin: 10px 0 0 0; }
         form label { font-weight: bold; }
