--- a/CSS/C24_PseudoClass.html
+++ b/CSS/C24_PseudoClass.html
@@ -39,6 +39,9 @@
 
     /* ul li:nth-child(2n+1) { color: orange; } */
     ul li:nth-child(even) { color: orange; }   /* odd => 홀수, even => 짝수 */
+
+    /* focus */
+    input[type="text"]:focus { background-color: orange;}
   </style>
 </head>
 <body>
@@ -110,5 +113,8 @@
     <li>list 04</li>
     <li>list 05</li>
   </ul>
+
+  <input type="text" name="name">
+  <input type="text" name="age">
 </body>
 </html>
