--- a/BootStrap/A04Typo.html
+++ b/BootStrap/A04Typo.html
@@ -44,16 +44,18 @@
     </figcaption>
   </figure>
 
-  <ul>
+  <div class="d-md-none">hide on lg and wider screens</div>
+
+  <ul class="mt-3 list-unstyled">
     <li>리스트 01</li>
     <li>리스트 01</li>
     <li>리스트 01</li>
   </ul>
 
-  <ul>
-    <li>This is a list item.</li>
-    <li>And another one.</li>
-    <li>But they're displayed inline.</li>
+  <ul class="list-inline">
+    <li class="list-inline-item">This is a list item.</li>
+    <li class="list-inline-item">And another one.</li>
+    <li class="list-inline-item">But they're displayed inline.</li>
   </ul>
   
   <dl>
