--- a/BootStrap/A05Image.html
+++ b/BootStrap/A05Image.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <style>
     div { margin-bottom: 20px; }
-    .box { width: 600px; }
+    .box { width: 800px; }
   </style>
 </head>
 <body>
@@ -16,19 +16,21 @@
     <h3>Image</h3>
 
     <div>
-      <img src="./images/tree.jpeg" alt="Tree">
+      <!-- 브라우저의 크기에 따라 이미지의 크기를 조절 -->
+      <img src="./images/tree.jpeg" alt="Tree" class="img-fluid">
     </div>
 
     <div>
-      <img src="./images/tree.jpeg" alt="Tree">
+      <img src="./images/tree.jpeg" alt="Tree" class="img-thumbnail" >
+    </div>
+
+    <div class="box border clearfix">
+      <img src="./images/tree.jpeg" alt="Tree" class="float-start">
+      <img src="./images/tree.jpeg" alt="Tree" class="float-end">
     </div>
 
     <div class="box">
-      <img src="./images/tree.jpeg" alt="Tree">
-    </div>
-
-    <div>
-      <img src="./images/tree.jpeg" alt="Tree" class="img-thumbnail">
+      <img src="./images/tree.jpeg" alt="Tree" class="img-thumbnail mx-auto d-block">
     </div>
   </div>
 </body>
