--- a/BootStrap/A06Table.html
+++ b/BootStrap/A06Table.html
@@ -11,7 +11,7 @@
   <div>
     <h3>Table</h3>
 
-    <table>
+    <table class="table table-danger table-hover">
       <caption>학생 점수</caption>
       <thead>
         <tr>
@@ -31,7 +31,36 @@
       </tbody>
     </table>
 
-    <table>
+    <table class="table table-striped table-bordered">
+      <caption>학생 점수</caption>
+      <thead>
+        <tr>
+          <th>이름</th><th>국어</th><th>영어</th><th>총점</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>홍길동</td><td>100</td><td>90</td><td>190</td>
+        </tr>
+        <tr>
+          <td>놀부</td><td>90</td><td>90</td><td>180</td>
+        </tr>
+        <tr>
+          <td>흥부</td><td>80</td><td>90</td><td>170</td>
+        </tr>
+        <tr>
+          <td>홍길동</td><td>100</td><td>90</td><td>190</td>
+        </tr>
+        <tr>
+          <td>놀부</td><td>90</td><td>90</td><td>180</td>
+        </tr>
+        <tr>
+          <td>흥부</td><td>80</td><td>90</td><td>170</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table class="table table-borderless table-hover">
       <caption>학생 점수</caption>
       <thead>
         <tr>
@@ -51,7 +80,7 @@
       </tbody>
     </table>
 
-    <table>
+    <table class="table table-sm">
       <caption>학생 점수</caption>
       <thead>
         <tr>
@@ -59,34 +88,14 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr class="table-primary">
           <td>홍길동</td><td>100</td><td>90</td><td>190</td>
         </tr>
         <tr>
-          <td>놀부</td><td>90</td><td>90</td><td>180</td>
+          <td class="table-active">놀부</td><td>90</td><td>90</td><td>180</td>
         </tr>
         <tr>
-          <td>흥부</td><td>80</td><td>90</td><td>170</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <table>
-      <caption>학생 점수</caption>
-      <thead>
-        <tr>
-          <th>이름</th><th>국어</th><th>영어</th><th>총점</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>홍길동</td><td>100</td><td>90</td><td>190</td>
-        </tr>
-        <tr>
-          <td>놀부</td><td>90</td><td>90</td><td>180</td>
-        </tr>
-        <tr>
-          <td>흥부</td><td>80</td><td>90</td><td>170</td>
+          <td class="table-danger">흥부</td><td>80</td><td>90</td><td>170</td>
         </tr>
       </tbody>
       <tfoot>
