--- a/BootStrap/A08Form.html
+++ b/BootStrap/A08Form.html
@@ -55,7 +55,8 @@
       </div>
       
       <div class="mb-3 row">
-        <div class="col-2">
+        <!-- https://stackoverflow.com/questions/41914954/how-to-force-a-fixed-column-width-with-a-bootstrap-grid-and-keep-the-other-ones -->
+        <div style="width: 200px">
             <div class="input-group">
                 <label for="color" class="input-group-text">색상: </label>
                 <input type="color" id="color" value="#FF00FF" class="form-control form-control-color">
