--- a/BootStrap/A12Modal.html
+++ b/BootStrap/A12Modal.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
@@ -51,6 +51,7 @@
               Show a second modal and hide this one with the button below.
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
                 <!-- data-bs-target="#three"  클릭하면 바뀔 모달의 아이디 지정-->
               <button class="btn btn-primary" data-bs-target="#three" data-bs-toggle="modal" data-bs-dismiss="modal">Open second modal</button>
             </div>
@@ -69,7 +70,9 @@
               Hide this modal and show the first with the button below.
             </div>
             <div class="modal-footer">
-              <button class="btn btn-primary" data-bs-target="#two" data-bs-toggle="modal" data-bs-dismiss="modal">Back to first</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                <!-- data-bs-target="#two"  클릭하면 바뀔 모달의 아이디 지정-->
+              <!-- <button class="btn btn-primary" data-bs-target="#two" data-bs-toggle="modal" data-bs-dismiss="modal">Back to first</button> -->
             </div>
           </div>
         </div>
